--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #505050;
+  height: 220px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,4 +29,6 @@
   to {
     transform: rotate(360deg);
   }
+
+
 }
