--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,55 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #b4afa9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.coffe-item {
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  width: 250px
+}
+
+.uno, .dos {
+  width: 100px; 
+  float:left; 
+  height:100px; 
+  background:white; 
+  margin:10px;
+}
+
+
+
+  .Frame-Left {
+    display: inline;
+    float: left;
+    width: 40%;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .Frame-Right {
+    background-color:#ffffff;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    width: 56%;
+    float: left;
+  }
+
+  .image-coffe {
+    width: 100px;
+    height: 100px;
+  }
+
+  ul {
+    list-style-type: none;
+    float: left;
+  }
