--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,40 @@ code {
     list-style-type: none;
     float: left;
   }
+
+  .main-button {
+    background-color: #4CAF50; 
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .default-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+  }
+
+  .default-button {
+    background-color: #555555;
+    color: white;
+  }
+  
+  .warning-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid red;
+  }
+
+  .warning-button {
+    background-color: red;
+    color: white;
+  }
